# aitviewer-interx

./: .gitignore  README.md  aitvconfig.yaml  pyproject.toml
aitviewer/: pyproject.toml  setup.py
aitviewer/aitviewer/: viewer.py
aitviewer/aitviewer/renderables/: smpl.py
aitviewer/aitviewer/utils/: imgui_integration.py  pyqt5_window.py
scripts/: extract_views.py  image_exporter.py  visualize.py
src/: body_cameras.py  gl_setup.py  interx_loader.py
