[project]
name = "smplx-visualizer"
version = "0.1.0"
description = "SMPLX dataset visualizer with multi-camera view extraction"
requires-python = ">=3.10,<3.11"

dependencies = [
    # aitviewer (local editable install)
    "aitviewer",

    # Core ML
    "torch>=1.6.0",
    "numpy>=1.18,<2",
    "scipy>=1.5.2",

    # SMPLX body model
    "smplx",

    # Rendering / Graphics
    "moderngl>=5.8.2,<6",
    "moderngl-window>=2.4.3",
    "imgui==2.0.0",
    "trimesh>=3.9.15,<4",
    "Pillow",
    "PyQt5>=5.15.4",

    # Utilities
    "opencv-contrib-python-headless>=4.5.1.48",
    "omegaconf>=2.1.1",
    "roma>=1.2.3",
    "joblib",
    "scikit-image>=0.9.0",
    "scikit-video",
    "tqdm>=4.60.0",
    "websockets",
    "usd-core>=23.5",
]

[tool.uv.sources]
aitviewer = { path = "aitviewer", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
